build script will now make sure the output folders exist for the instrumentation; ignoring .class files and log file

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 nbproject/
 build.xml
 manifest.mf
+project/pt/ulisboa/tecnico/cnv/**/*.class
+instrumented/pt/ulisboa/tecnico/cnv/**/*.class
+BIT/BIT/*.class
+WebServerLogFile.log
