--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ project/pt/ulisboa/tecnico/cnv/**/*.class
 instrumented/pt/ulisboa/tecnico/cnv/**/*.class
 BIT/BIT/*.class
 WebServerLogFile.log
+stats.backup.temp
